--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ticketapp-consumer-app",
+  "name": "ticketapp-staff-app",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo -c",
@@ -20,7 +20,6 @@
     "eas-cli": "3.9.0",
     "expo": "48.0.9",
     "expo-auth-session": "4.0.3",
-    "expo-dev-client": "~2.1.6",
     "expo-linear-gradient": "12.1.2",
     "expo-secure-store": "12.1.1",
     "expo-status-bar": "1.4.4",
