--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@rneui/themed": "4.0.0-rc.7",
     "axios": "1.3.5",
     "eas-cli": "3.9.0",
-    "expo": "48.0.9",
+    "expo": "^48.0.9",
     "expo-auth-session": "4.0.3",
     "expo-linear-gradient": "12.1.2",
     "expo-secure-store": "12.1.1",
@@ -36,7 +36,10 @@
     "react-native-screens": "3.20.0",
     "react-native-snap-carousel": "3.9.1",
     "react-native-vector-icons": "9.2.0",
-    "sjcl": "1.0.8"
+    "sjcl": "1.0.8",
+    "expo-camera": "~13.2.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-barcode-scanner": "~12.3.2"
   },
   "devDependencies": {
     "@babel/core": "7.20.2"
