--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "eas-cli": "3.9.0",
     "expo": "^48.0.9",
     "expo-auth-session": "4.0.3",
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-camera": "~13.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "12.1.2",
     "expo-secure-store": "12.1.1",
     "expo-status-bar": "1.4.4",
@@ -29,6 +32,7 @@
     "react-native": "0.71.6",
     "react-native-dotenv": "3.4.8",
     "react-native-gesture-handler": "2.9.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "5.5.0",
     "react-native-reanimated": "2.14.4",
     "react-native-render-html": "6.3.4",
@@ -36,10 +40,7 @@
     "react-native-screens": "3.20.0",
     "react-native-snap-carousel": "3.9.1",
     "react-native-vector-icons": "9.2.0",
-    "sjcl": "1.0.8",
-    "expo-camera": "~13.2.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-barcode-scanner": "~12.3.2"
+    "sjcl": "1.0.8"
   },
   "devDependencies": {
     "@babel/core": "7.20.2"
