--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@rneui/themed": "4.0.0-rc.7",
     "axios": "1.3.5",
     "eas-cli": "3.9.0",
-    "expo": "48.0.11",
+    "expo": "^48.0.11",
     "expo-auth-session": "4.0.3",
     "expo-barcode-scanner": "~12.3.2",
     "expo-camera": "13.2.1",
@@ -30,6 +30,7 @@
     "firebase": "9.18.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "3.4.8",
     "react-native-gesture-handler": "2.9.0",
     "react-native-modal": "13.0.1",
@@ -39,6 +40,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "3.20.0",
     "react-native-snap-carousel": "3.9.1",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "9.2.0",
     "sjcl": "1.0.8"
   },
